force-app/main/default/objects/PDF_Header__c/PDF_Header__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>PDF Header</label>
</CustomObject>