force-app/main/default/objects/PDF_Header__c/fields/Address_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Field_1__c</fullName>
    <label>Address Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>