force-app/main/default/objects/PDF_Header__c/fields/Address_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Field_3__c</fullName>
    <label>Address Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>