force-app/main/default/objects/PDF_Header__c/fields/PDF_Header_Logo__c.field-meta.xml
<CustomField>
    <fullName>PDF_Header_Logo__c</fullName>
    <label>PDF Header Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>